# Gmail_Project

./: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.client  Dockerfile.frontend  Dockerfile.server  Dockerfile.tests  Dockerfile.web  README.md  details.txt  docker-compose.yml  package-lock.json  start.sh
BloomFilterProject/: Dockerfile.tests
BloomFilterProject/data/: blacklist_urls.txt
BloomFilterProject/src/: main.cpp
BloomFilterProject/src/BloomFilterLogic/: BloomFilter.cpp
BloomFilterProject/src/CLIhandler/: CLI_handler.cpp  CLI_handler.h
BloomFilterProject/src/hash/: HashFunction.h  IterativeStdHash.cpp  IterativeStdHash.h
BloomFilterProject/tests/: hash_tests.cpp  integration_tests.cpp
client/: client.py  package-lock.json  package.json
client/public/: index.html
client/src/: App.js  index.js
client/src/api/: apiClient.js  mailAPI.js
client/src/components/: Home.js  Login.js  Register.js
client_android/: settings.gradle.kts
client_android/app/: build.gradle.kts
client_android/app/src/androidTest/java/com/example/gmail_android/: ExampleInstrumentedTest.java
client_android/app/src/main/: AndroidManifest.xml
client_android/app/src/main/java/com/example/gmail_android/: MainActivity.java
client_android/app/src/main/java/com/example/gmail_android/activity/: ComposeActivity.java  LabelAdapter.java  LoginActivity.java  MailAdapter.java  MailDetailsActivity.java  MainInboxActivity.java  RegisterActivity.java
client_android/app/src/main/java/com/example/gmail_android/auth/: TokenStore.java
client_android/app/src/main/java/com/example/gmail_android/dao/: AppDatabase.java  LabelDao.java  MailDao.java
client_android/app/src/main/java/com/example/gmail_android/entities/: AuthResponse.java  LabelEntity.java  MailEntity.java  MailLabelCrossRef.java  MailWithLabels.java  RegisterRequest.java  User.java
client_android/app/src/main/res/drawable/: bg_avatar_ring.xml  bg_icon_chip.xml  round_dark_mode_24.xml  search_icon.xml
client_android/app/src/main/res/layout/: activity_compose.xml  activity_login.xml  activity_mail_details.xml  activity_main_inbox.xml  activity_register.xml  item_label_row.xml  item_mail_row.xml
client_android/app/src/main/res/menu/: menu_inbox.xml  menu_profile.xml
client_android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
client_android/app/src/main/res/values-night/: themes.xml
client_android/app/src/test/java/com/example/gmail_android/: ExampleUnitTest.java
client_android/gradle/wrapper/: gradle-wrapper.properties
data/: blacklist_urls.txt
src/: Constants.h  ServerApp  client.py  main.cpp
src/BloomFilterLogic/: BloomFilter.cpp  BloomFilter.h
src/BloomFilterServer/: client.py
src/BloomFilterServer/BloomFilterLogic/: BloomFilter.cpp
src/BloomFilterServer/CLIhandler/: CLI_handler.cpp  CLI_handler.h
src/BloomFilterServer/commands/: AddCommand.cpp  AddCommand.h  CheckCommand.cpp  DeleteCommand.cpp  DeleteCommand.h
src/BloomFilterServer/server/: Server.cpp  Server.h  ThreadManager.h
src/CLIhandler/: CLI_handler.cpp  CLI_handler.h
src/client/: package-lock.json
src/client/src/: App.js  Compose.js  Layout.js  MailPage.js  Register.js  ThemeContext.js  inbox.js  login.js  styles.css
src/commands/: AddCommand.cpp  AddCommand.h  CheckCommand.cpp  CheckCommand.h  CommandResult.h  DeleteCommand.cpp  DeleteCommand.h  ICommand.h
src/frontend/: package-lock.json
src/frontend/public/: index.html
src/frontend/src/: App.js  Compose.js  Layout.js  MailPage.js  NaviBar.js  Register.js  RequireAuth.js  inbox.js  index.css  login.js
src/frontend/src/inbox-components/: Layout.js  NavBar.js  NaviBar.js  Sidebar.js  inbox.js
src/frontend/src/styles/: buttons.css  compose.css  form.css  inbox.css  layout.css  mail.css  sidebar.css  styles.css  theme.css  topbar.css  variables.css
src/server/: Server.cpp  Server.h
src/web_server/: .env  app.js  package-lock.json  package.json
src/web_server/controllers/: blacklist.js  labels.js  mails.js  tokens.js  users.js
src/web_server/models/: blacklist.js  labels.js  mails.js  tokens.js  users.js
src/web_server/routes/: blacklist.js  config.js  labels.js  mails.js  tokens.js  users.js
src/web_server/services/: blacklist.js  labels.js  mails.js  tokens.js  users.js
src/web_server/utils/: TCPclient.js  TCPclientconnection.js  auth.js  db.js  linkExtraction.js
tests/: bloom_tests.cpp  hash_tests.cpp  integration_tests.cpp  server_tests.cpp
tests/Command_tests/: AddCommand_tests.cpp  CheckCommand_tests.cpp  DeleteCommand_tests.cpp
web_server/: app.js
web_server/routes/: tokens.js  users.js
wiki/: API.md  Auth.md  Frontend.md  Home.md  Inbox.md  Mails.md  Setup.md
(+12 files in other folders)
